--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 html{
     font-size: 16px;
 }
 
 
-@media (max-width: 768px) { /* 태블릿 이하 */
-    html {
-        font-size: 14px;
-    }
+@media (max-width: 768px) {
+    /* 태블릿 이하 */
+    html {font-size: 14px;}
 }
 
-@media (max-width: 480px) { /* 모바일 */
-    html {
-        font-size: 12px;
-    }
+@media (max-width: 480px) { 
+    /* 모바일 */
+    html {font-size: 12px;} 
 }
 
 
