--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,6 @@ html{
     font-size: 16px;
 }
 
-
 body{
     background-color: #F6F6F6;
     justify-content: center;
@@ -25,6 +24,73 @@ body{
     overflow: auto; 
 }
 
+header{
+    position: fixed;
+    top: 0 ;
+    margin:auto;
+    max-width: 460px;
+    width: 100%;
+    background-color: #fff;
+    z-index: 1000; /* 다른 요소 위에 배치 */
+}
+
+main{
+    margin-top: 120px;
+}
+
+.search-console{
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+}
+
+
+.search{
+    display: flex;
+    width: 87%;
+    margin: auto;
+    align-items: center;
+    height: 3rem;
+    border-radius: 0.5rem;
+    transition: all .2sease-out;
+    border: 1px solid #A9A9A9;
+    padding: 0 12px;
+    /* box-shadow: 0 1px 2px #0000001f, 0 0 1px #00000014, 0 0 1px #00000014; */
+}
+
+#searchInput{
+    width: 100%;
+    border: none;
+    height: 90%;
+    font-size: 1rem;
+}
+
+input:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+
+.main-filter{
+    display: flex;
+    gap: 1.25rem;
+    align-items: center;
+    padding-top: 1.12rem;
+    padding-left: 15px;
+    border-bottom: 0.5px solid #A9A9A9;
+}
+
+.schedule-filter{
+    font-size: 1.2rem;
+    height: 100%;
+    padding-bottom: 1.12rem;
+}
+
+.schedule-filter.active{
+    border-bottom: 2px solid #666666;
+}
+
+/**/
 
 .list-pool > * {
     margin-bottom: 2px;
@@ -36,6 +102,7 @@ body{
     padding: 18px 15px;
     border-bottom: 1px solid #A9A9A9;
 }
+
 /* 
 .short-address{
 } */
