--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,14 +47,15 @@ main{
 
 .search{
     display: flex;
-    width: 87%;
+    width: 85%;
     margin: auto;
     align-items: center;
-    height: 3rem;
+    height: 2.5rem;
+    margin-top: 10px;
     border-radius: 0.5rem;
     transition: all .2sease-out;
     border: 1px solid #A9A9A9;
-    padding: 0 12px;
+    padding: 2px 5px;
     /* box-shadow: 0 1px 2px #0000001f, 0 0 1px #00000014, 0 0 1px #00000014; */
 }
 
