--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,8 +43,10 @@ main{
     align-items: center;
     padding: 5px 15px;
     margin-top: 10px;
+    margin-bottom: 10px;
+    
+    box-sizing: border-box;
 }
-
 
 .search{
     display: flex;
@@ -55,16 +57,22 @@ main{
     height: 2.5rem;
     border-radius: 0.5rem;
     transition: all .2sease-out;
-    border: 1px solid #A9A9A9;
-    padding: 2px 5px;
+    outline: 1px solid #A9A9A9;
+    background-color: #fff;
     /* box-shadow: 0 1px 2px #0000001f, 0 0 1px #00000014, 0 0 1px #00000014; */
+}
+
+.inside-search{
+    padding: 2px 10px;
+    width: 100%;
 }
 
 #searchInput{
     width: 100%;
     border: none;
-    height: 90%;
+    height: 100%;
     font-size: 1rem;
+    border-radius: 0.5rem;
 }
 
 input:focus {
