--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,16 +1,7 @@
 #map {
     width: 460px;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     margin: auto;
-}
-
-header{
-    display: block;
-    
-}
- 
-main{
-    margin-top: 0 !important;
 }
 
 button{
@@ -18,47 +9,109 @@ button{
 }
 
 
+.container {
+    width: 460px;  /* 아이폰 */
+    max-width: 100%;
+    height: calc(var(--vh, 1vh) * 100); /* 💡 100% → 안전하게 바꿈 */
+    margin: auto;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: auto; 
+}
+
 #bottomSheet {
     position: fixed;
     bottom: 0;
-    width: 95%;
+    width: 100%;
     max-width: 460px;
-    height: calc(100dvh - 35px); /* 초기 높이 (절반 크기) */
+    height: 20dvh; /* ✅ 초기 높이 (화면의 하단 20% 정도) */
     background: white;
     border-radius: 20px 20px 0 0;
-    transition: transform 0.3s ease-in-out;
-    transform: translateY(50%); /* 기본적으로 절반만 보이게 설정 */
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-    touch-action: none; /* ✅ 터치 동작 최적화 */
-    z-index: 99;
+    transition: height 0.3s ease-in-out; /* ✅ 부드러운 변화를 위한 애니메이션 */
+    overflow: hidden;
 }
+
 
 #handle {
     width: 100%;
-    height: 50px;
+    height: 15px;
     border-radius: 5px;
     cursor: grab;
+    padding-top:20px;
 }
 
 .handle-bar{
     margin: auto;
     height: 5px;
-    width: 100px;
+    width: 35px;
     background-color: #a9a9a9;
-    margin-top: 23px;
     border-radius: 50px;
 }
 
-#poolList {
-    padding: 20px;
-    max-height: 60vh;
-    overflow-y: auto;
+
+
+/* ✅ 검색 결과 컨테이너 */
+#resultContainer {
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 440px;
+    padding: 5px 10px;
+    /* background: rgba(255, 255, 255, 1); */
+    text-align: left;
+}
+
+#resultCount{
+    margin: 0;
+}
+
+/* ✅ 카드 리스트 (가로 스크롤) */
+#cardWrapper {
+    display: flex;
+    gap: 15px;
+    overflow: auto;
+    overflow-x: scroll;
+    white-space: nowrap;
+    scroll-snap-type: x mandatory;
+}
+
+/* ✅ 개별 카드 */
+.pool-card {
+    height: 8rem;
+    flex: 0 0 85%;
+    max-width: 85%;
+    padding: 5px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    scroll-snap-align: center;
 }
 
 
-.search-console{
-    position: absolute;
-    width: 100%;
-    box-sizing: border-box;
-}
+/*스와이퍼*/
 
+.cardUI {
+    position: relative;
+    margin: auto;
+    height: 8rem;
+    bottom: 10rem;
+    background-color: transparent;
+    margin-bottom: 1rem;
+  }
+
+  .swiper-slide {
+    position: relative;
+    text-align: center;
+    align-items: center;
+    background-color: #fff;
+    width: 68% !important;
+    padding: 1rem 1rem  0 1rem;
+    border-radius: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 12px 0px;
+  }
+
+
+  .hidden{
+    display:none;
+  }
