--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,29 +4,23 @@
 html{
     font-family: 'Pretendard', sans-serif;
     letter-spacing: -0.02em; /* 살짝 간격 조정 (Pretendard 권장값) */
-    font-size: 16px;
+    font-size: 14px;    
 }
 
 body{
     background-color: #F6F6F6;
     justify-content: center;
-    height: 100vh;
-    color: #222222;
+    height: 100%;
+    color: #3D3D3D;
+    overflow: hidden;
+    margin: 0;
 }
 
-.container {
-    width: 460px;  /* 아이폰 */
-    max-width: 100%;
-    height: 100vh;
-    margin: auto;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: auto; 
-}
 
 header{
     position: fixed;
     top: 0 ;
+    display: block;
     margin:auto;
     max-width: 460px;
     width: 100%;
@@ -34,28 +28,53 @@ header{
     z-index: 1000; /* 다른 요소 위에 배치 */
 }
 
-main{
-    margin-top: 120px;
-}
+:root {
+    --vh: 100%;
+  }
+  
+  .full-height {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+
+/*토스트^.^*/
+
+.custom-toast {
+    position: fixed;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0,0,0,0.8);
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 20px;
+    pointer-events: none;
+    transition: opacity 0.09s ease-in-out;
+    z-index: 9999;
+  }
+
+  .custom-toast.show {
+    opacity: 1;
+  }
+  
+
+/* 검색창 */
 
 .search-console{
-    display: flex;
-    align-items: center;
-    padding: 5px 15px;
-    margin-top: 10px;
+    padding: 20px 15px;
     margin-bottom: 10px;
-    
-    box-sizing: border-box;
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;    
 }
 
 .search{
     display: flex;
     align-items: center;
-    width: 85%;
+    width: 99%;
     margin: auto;
     align-items: center;
-    height: 2.5rem;
-    border-radius: 0.5rem;
+    height: 3rem;
+    border-radius: 9px;
     transition: all .2sease-out;
     outline: 1px solid #A9A9A9;
     background-color: #fff;
@@ -65,6 +84,8 @@ main{
 .inside-search{
     padding: 2px 10px;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 #searchInput{
@@ -80,6 +101,116 @@ input:focus {
     box-shadow: none;
 }
 
+
+.pool-item{
+    padding: 18px 15px;
+    border-bottom: 1px solid #A9A9A9;
+}
+
+.short-address{
+    text-align: left;
+    font-size: 1rem;
+}
+
+
+.pool-item > * {
+    margin-bottom: 2px;
+    line-height: 1.5;
+    margin-bottom: 4px;
+}
+
+.poolTitle{
+    display: flex;
+    padding: 0.5rem 0;
+    align-items: center;
+}
+
+.pool-name{
+    font-size: 1.3rem;
+    font-weight: 500;
+    margin-right: 7px;
+}
+
+.tag{
+    background-color: #c5cee9;
+    border-radius: 5px;
+    padding: 0.2rem 0.3rem;
+    font-size: 0.75rem;
+    font-weight: 500;
+    text-align: center;
+    margin-right: 5px;
+    align-self:center;
+}
+
+.noti{
+    font-size: 0.88rem;
+    color: #555;
+    text-align: left;
+}
+.fav-icon{
+    margin-left: auto;
+}
+
+
+
+/**/
+/* 
+.list-pool > * {
+    margin-bottom: 2px;
+    line-height: 1.5;
+    margin-bottom: 4px;
+}
+
+.list-pool{
+    padding: 18px 15px;
+    border-bottom: 1px solid #A9A9A9;
+} 
+    
+
+.title-group{
+    display: flex;
+    align-items: center;
+}
+    
+
+
+.pool-item:first-child{
+    padding-top: 5px;
+}
+
+.pool-title{
+ font-size: 1.12rem;
+ font-weight: 500;
+ margin-right: 7px;
+}
+
+
+.tag-mini{
+    background-color: #c5cee9;
+    border-radius: 6px;
+    width: 2.3rem;
+    padding: 0.125rem 0 ;
+    font-size: 0.75rem;
+    font-weight: 500;
+    text-align: center;
+    margin-right: 3px;
+}
+
+
+.off-noti{
+    font-size: 0.88rem;
+    color: #555555;
+}
+
+.time-table > * {
+    margin-bottom: 2px;
+}
+
+.session-num{
+    margin-right: 5px;
+}
+
+/* 리스트 페이지  맨 위 //
 
 .main-filter{
     display: flex;
@@ -100,60 +231,4 @@ input:focus {
 .schedule-filter.active{
     border-bottom: 2px solid #666666;
 }
-
-/**/
-
-.list-pool > * {
-    margin-bottom: 2px;
-    line-height: 1.5;
-    margin-bottom: 4px;
-}
-
-.list-pool{
-    padding: 18px 15px;
-    border-bottom: 1px solid #A9A9A9;
-}
-
-/* 
-.short-address{
-} */
-
-.title-group{
-    display: flex;
-    align-items: center;
-}
-
-
-.pool-title{
- font-size: 1.25rem;
- font-weight: 500;
- margin-right: 7px;
-}
-
-.tag-mini{
-    background-color: #c5cee9;
-    border-radius: 6px;
-    width: 2.3rem;
-    padding: 0.125rem 0 ;
-    font-size: 0.75rem;
-    font-weight: 500;
-    text-align: center;
-    margin-right: 3px;
-}
-
-.fav-icon{
-    margin-left: auto;
-}
-
-.off-noti{
-    font-size: 0.88rem;
-    color: #555555;
-}
-
-.time-table > * {
-    margin-bottom: 2px;
-}
-
-.session-num{
-    margin-right: 5px;
-}
+*/
