--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,102 @@
-#map {
-    width: 460px;
-    height: calc(var(--vh, 1vh) * 100);
-    margin: auto;
-}
-
 button{
     display: block;
 }
 
+  
+.map-container{
+    position: relative;    
+    width: 100%;
+}
+
+#map {
+    width: 460px;
+    height: calc(var(--vh, 1vh) * 100);
+    position: relative;
+    top: 0;
+}
+
+/* 검색창 */
+
+.search-console{
+    position: absolute;
+    top: 1rem;   
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-sizing: border-box;    
+    z-index: 1000;
+}
+
+.search{
+    /* width: 85%; */
+    border-radius: 1rem;
+    outline: 1px solid #a9a9a9;
+    background-color: #fff;
+}
+
+.inside-search{
+    padding: 0.6rem 1rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#searchInput{
+    width: 100%;
+    border: none;
+    height: 100%;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+}
+
+input:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+
+.location-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 888;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    border:1px solid #a9a9a9;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    position: absolute;
+    left: 0.5rem;
+    bottom: 16rem;
+  }
+  
+  .crosshair{
+    width: 22px;
+    height: 22px;
+    stroke: #383838;
+    stroke-width: 3; 
+    stroke-linecap: round;
+    stroke-linejoin : round;
+  }
+
+  .location-btn.active .crosshair{
+    stroke: #0982ec;
+  }
+
+  .loading-spinner {
+    position: absolute;
+    top: 3.5rem;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    z-index: 999;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 1px solid #a9a9a9;
+    background: url('/public/images/loading.gif') no-repeat center / cover;
+  }
 
 .container {
     width: 460px;  /* 아이폰 */
@@ -95,7 +184,7 @@ button{
     position: relative;
     margin: auto;
     height: 8rem;
-    bottom: 10rem;
+    bottom: 15rem;
     background-color: transparent;
     margin-bottom: 1rem;
   }
