mypage 리뷰 tab 내 세로스크롤 (tabcontent 내의 height 계산한 뒤 적용), reviewCard myCard 스타일 조정

--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -28,7 +28,9 @@ main{
   
   .tabContent {
     display: none;
-    padding:1rem;
+    padding: 1rem 0.5rem;
+    max-height: calc(100dvh - 59px - 64px - 55px ); /* header + 탭 높이 제외한 나머지 */
+    overflow-y: auto;
   }
   
   .tabContent.active {
@@ -43,6 +45,10 @@ main{
   }
 
 
+  .myCard.reviewCard::after {
+    display: none !important;
+    content: none !important; 
+}
 
 
   #userInfo {
