--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,33 @@ header{
  
 }
 
+.container {
+  width: 460px;  /* 아이폰 */
+  max-width: 100%;
+  height: calc(var(--vh, 1vh) * 100); /* 💡 100% → 안전하게 바꿈 */
+  margin: auto;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: auto; 
+}
+
+.containerDetail{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 460px;  /* 아이폰 */
+  max-width: 100%;
+  height: 100%;
+  margin: auto;
+  background-color:#F5F5F5;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: auto; 
+}
+
+
+
+
+
 main {
   padding-top: var(--header-height);
   width: 100%;
@@ -117,6 +144,20 @@ button {
   width: 108%;
   height: 0.7rem;
   z-index: -1;
+}
+
+
+#Back{
+  font-size: 1.3rem;
+}
+
+#Back, #heartBtn {
+  cursor: pointer;
+}
+
+#heartBtn {
+  font-size: 1.2rem;
+  transition: transform 0.2s ease;
 }
 
 
