--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -6,10 +6,6 @@
     border-bottom: 1px solid #f9f9f9;
 }
 
-/*임시로 헤더 높이 조정*/
-main{
-  padding-top: 64px;
-}
 
 .tab {
     flex: 1;
@@ -53,7 +49,7 @@ main{
 
   #userInfo {
     gap: 0.3rem;
-    border: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     padding: 1.2rem;
     align-items: center;
     background-color: #ffffff;
