--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -1,5 +1,3 @@
-
-
 .flex{
     display: flex;
 }
@@ -177,6 +175,11 @@
 .day-tab.closed {
     background-color: #f5f5f5;
     color: #999;
+}
+
+.day-tab.closed.active {
+    background-color: #C8F575;
+    color: #000;
 }
 
 .session-num{
