--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ header{
   margin: auto;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  overflow: auto; 
+  overflow: hidden; 
 }
 
 .containerDetail{
