--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -221,11 +221,9 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    margin-top: 10px;
-    padding-top: 10px;
-    border-top: 1px dashed #ddd;
+    background-color: #f5f5f5;
+    padding: 10px;
 }
-
 
 .parking-item, .transportation-item{
     margin-bottom: 0.3rem;
