몇가지오류수정과함께

--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -133,3 +133,10 @@
     margin-top: 0.5rem;
   }
   
+
+  .review-like{
+    padding: 0.5rem 0;
+    font-size: 1.1rem;
+    display: flex;
+    gap: 0.7rem;
+  }
