--- a/public/css/addFavRev.css
+++ b/public/css/addFavRev.css
@@ -21,17 +21,59 @@
     margin-bottom: 0.5rem;
 }
 
+
+.review-text {
+    padding: 0.5rem 0;
+  }
+
+  .review-text p {
+    margin: 0;
+    line-height: 1.5;
+  }
+
+  .review-content {
+    margin-top: 0.5rem;
+  }
+  
+
+  .review-like{
+    padding-top: 0.9rem;
+    font-size: 1rem;
+    display: flex;
+    gap: 0.7rem;
+  }
+
+
 /* 사용자 정보 영역 */
 .review-user-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 0.7rem;
+    align-items: center;
 }
 
 .review-name {
     font-weight: 500;
     margin-bottom: 2px;
     color: #333;
+    position: relative;
+    z-index: 1;
+    display: inline-block;
 }
+
+
+.review-name::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.5rem;
+    background-color: #C8F575;
+    opacity: 0.5;
+    z-index: -1;
+    pointer-events: none;
+  }
 
 .review-date {
     font-size: 12px;
