--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -213,7 +213,6 @@
 
 .charge-info {
     background-color: #f5f5f5;
-    padding: 15px;
     margin-bottom: 0.3rem;
 }
 
@@ -222,7 +221,7 @@
     flex-wrap: wrap;
     gap: 10px;
     background-color: #f5f5f5;
-    padding: 10px;
+    padding: 1rem;
 }
 
 .parking-item, .transportation-item{
